--- a/usr/share/openmediavault/locale/es_CO/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/es_CO/openmediavault-openvpn.po
@@ -1,27 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-03-29 15:54+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Spanish (Colombia) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/es_CO/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Spanish (Colombia) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/es_CO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es_CO\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
 
 msgid "Add certificate"
 msgstr ""
@@ -30,6 +24,11 @@ msgid "Address"
 msgstr ""
 
 msgid "Allow client to client communication"
+msgstr ""
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
 msgstr ""
 
 msgid "Certificates"
@@ -71,6 +70,9 @@ msgstr ""
 msgid "Extra options"
 msgstr ""
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -92,13 +94,7 @@ msgstr ""
 msgid "Mask"
 msgstr ""
 
-msgid "No IP reserved."
-msgstr ""
-
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -107,7 +103,7 @@ msgstr ""
 msgid "OpenVPN"
 msgstr ""
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
@@ -120,6 +116,9 @@ msgid "Public"
 msgstr ""
 
 msgid "Public address"
+msgstr ""
+
+msgid "Select a device ..."
 msgstr ""
 
 msgid "Separate multiple entries with commas"
