--- a/usr/share/openmediavault/locale/gl/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/gl/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013-2014
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2015-02-16 18:14+0000\n"
-"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
-"Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault-openvpn/language/gl/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Galician (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: gl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------Estado OpenVPN--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----Reserva de agrupación de IP-----"
 
 msgid "Add certificate"
 msgstr "Engadir certificado"
@@ -32,6 +26,11 @@ msgstr "Enderezo"
 
 msgid "Allow client to client communication"
 msgstr "Permitir a comunicación de cliente a cliente"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certificados"
@@ -72,6 +71,9 @@ msgstr "Actividade"
 msgid "Extra options"
 msgstr "Opcións adicionais"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "Xeral"
 
@@ -93,14 +95,8 @@ msgstr "Nivel de rexistro"
 msgid "Mask"
 msgstr "Máscara"
 
-msgid "No IP reserved."
-msgstr "Non se reservou ningún IP."
-
 msgid "No output except fatal errors"
 msgstr "Non amosar nada, agás os erros fatais"
-
-msgid "No users connected."
-msgstr "Non hai ningún usuario conectado"
 
 msgid "Normal usage output"
 msgstr "Amosar o uso normal"
@@ -108,8 +104,8 @@ msgstr "Amosar o uso normal"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN está desactivado"
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Porto"
@@ -122,6 +118,9 @@ msgstr "Público"
 
 msgid "Public address"
 msgstr "Enderezo público"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Separe as entradas múltiples con comas."
