--- a/usr/share/openmediavault/locale/openmediavault-openvpn.pot
+++ b/usr/share/openmediavault/locale/openmediavault-openvpn.pot
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,12 +17,6 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
-
 msgid "Add certificate"
 msgstr ""
 
@@ -30,6 +24,9 @@ msgid "Address"
 msgstr ""
 
 msgid "Allow client to client communication"
+msgstr ""
+
+msgid "Authenticate with server using username/password (client certificate and key are still required)."
 msgstr ""
 
 msgid "Certificates"
@@ -71,6 +68,9 @@ msgstr ""
 msgid "Extra options"
 msgstr ""
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -89,13 +89,7 @@ msgstr ""
 msgid "Mask"
 msgstr ""
 
-msgid "No IP reserved."
-msgstr ""
-
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -104,7 +98,7 @@ msgstr ""
 msgid "OpenVPN"
 msgstr ""
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
@@ -117,6 +111,9 @@ msgid "Public"
 msgstr ""
 
 msgid "Public address"
+msgstr ""
+
+msgid "Select a device ..."
 msgstr ""
 
 msgid "Separate multiple entries with commas"
