--- a/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
@@ -1,152 +1,152 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/cs_CZ/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Czech (Czech Republic) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs_CZ\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
-
 msgid "Add certificate"
-msgstr ""
+msgstr "Přidat certifikát"
 
 msgid "Address"
-msgstr ""
+msgstr "Adresa"
 
 msgid "Allow client to client communication"
+msgstr "Umožnit komunikaci mezi klienty"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
 msgstr ""
 
 msgid "Certificates"
-msgstr ""
+msgstr "Certifikáty"
 
 msgid "Client to client"
-msgstr ""
+msgstr "Klient - klient"
 
 msgid "Common name"
-msgstr ""
+msgstr "Obecný název (CN)"
 
 msgid "DHCP options"
-msgstr ""
+msgstr "Předvolby DHCP"
 
 msgid "DNS search domains(s)"
-msgstr ""
+msgstr "DNS domény, ve kterých hledat"
 
 msgid "DNS server(s)"
-msgstr ""
+msgstr "DNS servery"
 
 msgid "Date & Time"
-msgstr ""
+msgstr "Datum a čas"
 
 msgid "Debug"
-msgstr ""
+msgstr "Ladění"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Výchozí brána"
 
 msgid "Download certificate"
-msgstr ""
+msgstr "Stáhnout si certifikát"
 
 msgid "Enable"
-msgstr ""
+msgstr "Zapnout"
 
 msgid "Event"
-msgstr ""
+msgstr "Událost"
 
 msgid "Extra options"
+msgstr "Rozšířené předvolby"
+
+msgid "Gateway interface"
 msgstr ""
 
 msgid "General"
-msgstr ""
+msgstr "Obecné"
 
 msgid "General settings"
-msgstr ""
+msgstr "Obecná nastavení"
 
 msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "V případě, že je zapnuta, tato direktiva nastaví veškeré klienty, aby přesměrovali svou sítovou bránu skrze VPN. Pokud je vypnuto, je na všech klientech nastavena statická trasa na soukromou podsíť."
 
 msgid "Log each packet"
-msgstr ""
+msgstr "Zaznamenat každý paket"
 
 msgid "Logging level"
-msgstr ""
+msgstr "Podrobnost protokolování"
 
 msgid "Mask"
-msgstr ""
-
-msgid "No IP reserved."
-msgstr ""
+msgstr "Maska"
 
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
-msgstr ""
+msgstr "Žádný výstup krom fatálních chyb"
 
 msgid "Normal usage output"
-msgstr ""
+msgstr "Výstup z běžného používání"
 
 msgid "OpenVPN"
-msgstr ""
+msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 msgid "Protocol"
-msgstr ""
+msgstr "Protokol"
 
 msgid "Public"
-msgstr ""
+msgstr "Veřejné"
 
 msgid "Public address"
+msgstr "Veřejná adresa"
+
+msgid "Select a device ..."
 msgstr ""
 
 msgid "Separate multiple entries with commas"
-msgstr ""
+msgstr "Vícero položek oddělujte čárkou"
 
 msgid "Services"
-msgstr ""
+msgstr "Služby"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavení"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "Toto je adresa prostřednictvím které se klienti mohou připojit do vaší VPN. Tato hodnota je promítnuta do vytvářeného nastavení."
 
 msgid "UUID"
-msgstr ""
+msgstr "Univerzálně jedinečný identifikátor"
 
 msgid "Use compression"
-msgstr ""
+msgstr "Komprimovat"
 
 msgid "User"
-msgstr ""
+msgstr "Uživatel"
 
 msgid "VPN network"
-msgstr ""
+msgstr "VPN síť"
 
 msgid "WINS server(s)"
-msgstr ""
+msgstr "WINS servery"
