--- a/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Stefan Thrane Overby <stoverby@gmail.com>, 2014
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/da/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Danish (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: da\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------OpenVPN status--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----IP pool reservation-----"
 
 msgid "Add certificate"
 msgstr "Tilføj certifikat"
@@ -32,6 +26,11 @@ msgstr "Adresse"
 
 msgid "Allow client to client communication"
 msgstr "Tillad klient til klient kommunikation"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certifikater"
@@ -72,6 +71,9 @@ msgstr "Begivenhed"
 msgid "Extra options"
 msgstr "Ekstra valgmuligheder"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "Generelt"
 
@@ -93,14 +95,8 @@ msgstr "Log niveau"
 msgid "Mask"
 msgstr "Masker"
 
-msgid "No IP reserved."
-msgstr "Ingen IP reserveret."
-
 msgid "No output except fatal errors"
 msgstr "Intet output undtaget alvorlige fejl"
-
-msgid "No users connected."
-msgstr "Ingen brugere forbundet."
 
 msgid "Normal usage output"
 msgstr "Normal forbrug output"
@@ -108,8 +104,8 @@ msgstr "Normal forbrug output"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN er deaktiveret."
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Port"
@@ -122,6 +118,9 @@ msgstr "Offentlig"
 
 msgid "Public address"
 msgstr "Offentlig adresse"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Del forskellige indtastninger med komma"
