--- a/usr/share/openmediavault/locale/en_GB/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/en_GB/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Andi Chandler <andi@gowling.com>, 2015
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2015-04-17 14:53+0000\n"
-"Last-Translator: Andi Chandler <andi@gowling.com>\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/en_GB/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: English (United Kingdom) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------OpenVPN status--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----IP pool reservation-----"
 
 msgid "Add certificate"
 msgstr "Add certificate"
@@ -32,6 +26,11 @@ msgstr "Address"
 
 msgid "Allow client to client communication"
 msgstr "Allow client to client communication"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certificates"
@@ -72,6 +71,9 @@ msgstr "Event"
 msgid "Extra options"
 msgstr "Extra options"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "General"
 
@@ -93,14 +95,8 @@ msgstr "Logging level"
 msgid "Mask"
 msgstr "Mask"
 
-msgid "No IP reserved."
-msgstr "No IP reserved."
-
 msgid "No output except fatal errors"
 msgstr "No output except fatal errors"
-
-msgid "No users connected."
-msgstr "No users connected."
 
 msgid "Normal usage output"
 msgstr "Normal usage output"
@@ -108,8 +104,8 @@ msgstr "Normal usage output"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN is disabled."
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Port"
@@ -122,6 +118,9 @@ msgstr "Public"
 
 msgid "Public address"
 msgstr "Public address"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Separate multiple entries with commas"
