--- a/usr/share/openmediavault/locale/es/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/es/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Raul Fernandez Garcia <raulfg3@gmail.com>, 2014
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/es/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------OpenVPN estado--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----Reserva IP pool-----"
 
 msgid "Add certificate"
 msgstr "Añadir certificado"
@@ -32,6 +26,11 @@ msgstr "Dirección"
 
 msgid "Allow client to client communication"
 msgstr "Permitir comunicación cliente a cliente"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certificados"
@@ -72,6 +71,9 @@ msgstr "Evento"
 msgid "Extra options"
 msgstr "Opciones"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "General"
 
@@ -93,14 +95,8 @@ msgstr "Nivel de log"
 msgid "Mask"
 msgstr "Máscara"
 
-msgid "No IP reserved."
-msgstr "No se ha reservado IP."
-
 msgid "No output except fatal errors"
 msgstr "No mostrar nada excepto errores fatales."
-
-msgid "No users connected."
-msgstr "No hay usuarios conectados."
 
 msgid "Normal usage output"
 msgstr "Mostar uso normal"
@@ -108,8 +104,8 @@ msgstr "Mostar uso normal"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN está deshabilitado."
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Puerto"
@@ -122,6 +118,9 @@ msgstr "Publico"
 
 msgid "Public address"
 msgstr "Dirección publica"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Separar multiples entradas con comas"
