--- a/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Seboss666 <sebastien_verdet@seboss666.info>, 2015
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2015-04-06 00:45+0000\n"
-"Last-Translator: Seboss666 <sebastien_verdet@seboss666.info>\n"
-"Language-Team: French (http://www.transifex.com/projects/p/openmediavault-openvpn/language/fr/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: French (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------État d'OpenVPN--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----Réservation du pool d'IP-----"
 
 msgid "Add certificate"
 msgstr "Ajouter le certificat"
@@ -32,6 +26,11 @@ msgstr "Adresse"
 
 msgid "Allow client to client communication"
 msgstr "Autoriser la communication client à client"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certificats"
@@ -72,6 +71,9 @@ msgstr "Évènement"
 msgid "Extra options"
 msgstr "Options supplémentaires"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "Général"
 
@@ -93,14 +95,8 @@ msgstr "Niveau de journalisation"
 msgid "Mask"
 msgstr "Masquer"
 
-msgid "No IP reserved."
-msgstr "Aucune IP réservée."
-
 msgid "No output except fatal errors"
 msgstr "Aucune sortie exceptée des erreurs fatales"
-
-msgid "No users connected."
-msgstr "Aucun utilisateur connecté."
 
 msgid "Normal usage output"
 msgstr "Sortie d'utilisation normale"
@@ -108,8 +104,8 @@ msgstr "Sortie d'utilisation normale"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN est désactivé."
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Port"
@@ -122,6 +118,9 @@ msgstr "Public"
 
 msgid "Public address"
 msgstr "Adresse publique"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Séparer les entrées multiples avec des virgules"
