--- a/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Paolo Velati <paolo.velati@gmail.com>, 2014-2015
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2015-02-03 14:40+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/it/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Italian (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------Stato di OpenVPN--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----Pool prenotazione IP-----"
 
 msgid "Add certificate"
 msgstr "Aggiungi certificato"
@@ -32,6 +26,11 @@ msgstr "Indirizzo"
 
 msgid "Allow client to client communication"
 msgstr "Permetti comunicazione client a client"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "Certificati"
@@ -72,6 +71,9 @@ msgstr "Evento"
 msgid "Extra options"
 msgstr "Opzioni Extra"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "Generale"
 
@@ -93,14 +95,8 @@ msgstr "Livello di log"
 msgid "Mask"
 msgstr "Maschera"
 
-msgid "No IP reserved."
-msgstr "Nessun IP riservato."
-
 msgid "No output except fatal errors"
 msgstr "Nessun output tranne che per errori fatali"
-
-msgid "No users connected."
-msgstr "Nessun utente connesso."
 
 msgid "Normal usage output"
 msgstr "Output di utilizzo normale"
@@ -108,8 +104,8 @@ msgstr "Output di utilizzo normale"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPN è disabilitato."
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "Porta"
@@ -122,6 +118,9 @@ msgstr "Pubblico"
 
 msgid "Public address"
 msgstr "Indirizzo pubblico"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "Separa voci multiple con una virgola"
