--- a/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Toshihiro Kan <kansuke4649@gmail.com>, 2014
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ja_JP/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Japanese (Japan) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ja_JP\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-
-msgid "-------OpenVPN status--------"
-msgstr "-------OpenVPN ステータス--------"
-
-msgid "-----IP pool reservation-----"
-msgstr "-----IP pool 予約-----"
 
 msgid "Add certificate"
 msgstr "証明書の追加"
@@ -32,6 +26,11 @@ msgstr "アドレス"
 
 msgid "Allow client to client communication"
 msgstr "クライアント間の通信を許可"
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
+msgstr ""
 
 msgid "Certificates"
 msgstr "証明書"
@@ -72,6 +71,9 @@ msgstr "イベント"
 msgid "Extra options"
 msgstr "その他のオプション"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr "一般"
 
@@ -93,14 +95,8 @@ msgstr "ログレベル"
 msgid "Mask"
 msgstr "マスク"
 
-msgid "No IP reserved."
-msgstr "予約されたIPはありません。"
-
 msgid "No output except fatal errors"
 msgstr "致命的なエラー以外は何も出力しない"
-
-msgid "No users connected."
-msgstr "だれも接続していません。"
 
 msgid "Normal usage output"
 msgstr "通常の出力方法"
@@ -108,8 +104,8 @@ msgstr "通常の出力方法"
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
-msgstr "OpenVPNは無効です。"
+msgid "PAM authentication"
+msgstr ""
 
 msgid "Port"
 msgstr "ポート"
@@ -122,6 +118,9 @@ msgstr "公開"
 
 msgid "Public address"
 msgstr "公開アドレス"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr "カンマ区切りの複数エントリー"
