--- a/usr/share/openmediavault/locale/pl/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/pl/openmediavault-openvpn.po
@@ -1,27 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-03-29 15:54+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Polish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Polish (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 
 msgid "Add certificate"
 msgstr ""
@@ -30,6 +24,11 @@ msgid "Address"
 msgstr ""
 
 msgid "Allow client to client communication"
+msgstr ""
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
 msgstr ""
 
 msgid "Certificates"
@@ -71,6 +70,9 @@ msgstr ""
 msgid "Extra options"
 msgstr ""
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -92,13 +94,7 @@ msgstr ""
 msgid "Mask"
 msgstr ""
 
-msgid "No IP reserved."
-msgstr ""
-
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -107,7 +103,7 @@ msgstr ""
 msgid "OpenVPN"
 msgstr ""
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
@@ -120,6 +116,9 @@ msgid "Public"
 msgstr ""
 
 msgid "Public address"
+msgstr ""
+
+msgid "Select a device ..."
 msgstr ""
 
 msgid "Separate multiple entries with commas"
