--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
 # Alexander Savchenko, 2014-2015
@@ -8,21 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2015-03-04 19:38+0000\n"
-"Last-Translator: Alexander Savchenko\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ru/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Russian (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Add certificate"
 msgstr "Добавить сетификат"
@@ -31,6 +25,11 @@ msgid "Address"
 msgstr "Адрес"
 
 msgid "Allow client to client communication"
+msgstr ""
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
 msgstr ""
 
 msgid "Certificates"
@@ -72,6 +71,9 @@ msgstr ""
 msgid "Extra options"
 msgstr "Дополнительные опции"
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -93,13 +95,7 @@ msgstr ""
 msgid "Mask"
 msgstr "Маска"
 
-msgid "No IP reserved."
-msgstr ""
-
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -108,7 +104,7 @@ msgstr ""
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
@@ -122,6 +118,9 @@ msgstr ""
 
 msgid "Public address"
 msgstr "Публичный адрес"
+
+msgid "Select a device ..."
+msgstr ""
 
 msgid "Separate multiple entries with commas"
 msgstr ""
