--- a/usr/share/openmediavault/locale/uk_UK/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/uk_UK/openmediavault-openvpn.po
@@ -1,27 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-openvpn package.
 # 
 # Translators:
+# zubr139, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Ukrainian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/uk/)\n"
+"POT-Creation-Date: 2017-11-27 09:18-0600\n"
+"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
+"Language-Team: Ukrainian (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: uk\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-
-msgid "-------OpenVPN status--------"
-msgstr ""
-
-msgid "-----IP pool reservation-----"
-msgstr ""
 
 msgid "Add certificate"
 msgstr ""
@@ -30,6 +25,11 @@ msgid "Address"
 msgstr ""
 
 msgid "Allow client to client communication"
+msgstr ""
+
+msgid ""
+"Authenticate with server using username/password (client certificate and key"
+" are still required)."
 msgstr ""
 
 msgid "Certificates"
@@ -71,6 +71,9 @@ msgstr ""
 msgid "Extra options"
 msgstr ""
 
+msgid "Gateway interface"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -92,13 +95,7 @@ msgstr ""
 msgid "Mask"
 msgstr ""
 
-msgid "No IP reserved."
-msgstr ""
-
 msgid "No output except fatal errors"
-msgstr ""
-
-msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -107,7 +104,7 @@ msgstr ""
 msgid "OpenVPN"
 msgstr ""
 
-msgid "OpenVPN is disabled."
+msgid "PAM authentication"
 msgstr ""
 
 msgid "Port"
@@ -122,6 +119,9 @@ msgstr ""
 msgid "Public address"
 msgstr ""
 
+msgid "Select a device ..."
+msgstr ""
+
 msgid "Separate multiple entries with commas"
 msgstr ""
 
@@ -129,7 +129,7 @@ msgid "Services"
 msgstr ""
 
 msgid "Settings"
-msgstr ""
+msgstr "Налаштування"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
@@ -143,7 +143,7 @@ msgid "Use compression"
 msgstr ""
 
 msgid "User"
-msgstr ""
+msgstr "Користувач"
 
 msgid "VPN network"
 msgstr ""
