--- a/usr/share/openmediavault/locale/bg/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/bg/openmediavault-openvpn.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 09:18-0600\n"
-"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"POT-Creation-Date: 2017-11-27 09:19-0600\n"
+"PO-Revision-Date: 2017-11-27 15:19+0000\n"
 "Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/bg/)\n"
 "MIME-Version: 1.0\n"
@@ -80,9 +80,10 @@ msgid "General settings"
 msgstr ""
 
 msgid ""
-"If enabled, this directive will configure all clients to redirect their "
-"default network gateway through the VPN. If disabled, a static route to the "
-"private subnet is configured on all clients."
+"If enabled, this directive will configure all clients to redirect their"
+"                             default network gateway through the VPN. If "
+"disabled, a static route to the                             private subnet "
+"is configured on all clients."
 msgstr ""
 
 msgid "Log each packet"
