--- a/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/cs_CZ/openmediavault-openvpn.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 09:18-0600\n"
-"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"POT-Creation-Date: 2017-11-27 09:19-0600\n"
+"PO-Revision-Date: 2017-11-27 15:19+0000\n"
 "Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -81,10 +81,11 @@ msgid "General settings"
 msgstr "Obecná nastavení"
 
 msgid ""
-"If enabled, this directive will configure all clients to redirect their "
-"default network gateway through the VPN. If disabled, a static route to the "
-"private subnet is configured on all clients."
-msgstr "V případě, že je zapnuta, tato direktiva nastaví veškeré klienty, aby přesměrovali svou sítovou bránu skrze VPN. Pokud je vypnuto, je na všech klientech nastavena statická trasa na soukromou podsíť."
+"If enabled, this directive will configure all clients to redirect their"
+"                             default network gateway through the VPN. If "
+"disabled, a static route to the                             private subnet "
+"is configured on all clients."
+msgstr ""
 
 msgid "Log each packet"
 msgstr "Zaznamenat každý paket"
