--- a/usr/share/openmediavault/locale/de_DE/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/de_DE/openmediavault-openvpn.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 09:18-0600\n"
-"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"POT-Creation-Date: 2017-11-27 09:19-0600\n"
+"PO-Revision-Date: 2017-11-27 15:19+0000\n"
 "Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -84,10 +84,11 @@ msgid "General settings"
 msgstr "Allgemeine Einstellungen"
 
 msgid ""
-"If enabled, this directive will configure all clients to redirect their "
-"default network gateway through the VPN. If disabled, a static route to the "
-"private subnet is configured on all clients."
-msgstr "Wenn aktiviert, wird die Konfiguration aller Klienten so geändert, dass der Standard Zugangspunkt durch das VPN läuft. Wenn deaktviert, wird eine statische Route zum privaten Subnetz des VPNs auf allen Klienten konfiguriert."
+"If enabled, this directive will configure all clients to redirect their"
+"                             default network gateway through the VPN. If "
+"disabled, a static route to the                             private subnet "
+"is configured on all clients."
+msgstr ""
 
 msgid "Log each packet"
 msgstr "Jedes Paket protokollieren."
