--- a/usr/share/openmediavault/locale/ko_KR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ko_KR/openmediavault-openvpn.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 09:18-0600\n"
-"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"POT-Creation-Date: 2017-11-27 09:19-0600\n"
+"PO-Revision-Date: 2017-11-27 15:19+0000\n"
 "Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -81,10 +81,11 @@ msgid "General settings"
 msgstr "일반 설정"
 
 msgid ""
-"If enabled, this directive will configure all clients to redirect their "
-"default network gateway through the VPN. If disabled, a static route to the "
-"private subnet is configured on all clients."
-msgstr "선택한 경우, 모든 클라이언트가 기본 네트워크 게이트웨이를 VPN을 통해 재전송하도록 구성합니다. 해제한 경우, 개인 서브넷에 대한 정적 경로는 모든 클라이언트에 구성되어 있습니다."
+"If enabled, this directive will configure all clients to redirect their"
+"                             default network gateway through the VPN. If "
+"disabled, a static route to the                             private subnet "
+"is configured on all clients."
+msgstr ""
 
 msgid "Log each packet"
 msgstr "개별 패킷 기록"
