--- a/usr/share/openmediavault/locale/hu_HU/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/hu_HU/openmediavault-openvpn.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-27 09:18-0600\n"
-"PO-Revision-Date: 2017-11-27 15:18+0000\n"
+"POT-Creation-Date: 2017-11-27 09:19-0600\n"
+"PO-Revision-Date: 2017-11-27 15:19+0000\n"
 "Last-Translator: Aaron Murray <aaronmurray27@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/openmediavault-plugin-developers/openmediavault-openvpn/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -81,10 +81,11 @@ msgid "General settings"
 msgstr "Általános beállítások"
 
 msgid ""
-"If enabled, this directive will configure all clients to redirect their "
-"default network gateway through the VPN. If disabled, a static route to the "
-"private subnet is configured on all clients."
-msgstr "Bekapcsolva minden kliens úgy lesz konfigurálva, hogy az alapértelmezett hálózati átjárójuk a VPN-en keresztül legyen átirányítva. Kikapcsolva minden kliensnél be lesz állítva a privát alhálózatra mutató statikus útvonal."
+"If enabled, this directive will configure all clients to redirect their"
+"                             default network gateway through the VPN. If "
+"disabled, a static route to the                             private subnet "
+"is configured on all clients."
+msgstr ""
 
 msgid "Log each packet"
 msgstr "Minden csomag naplózása"
